syntax = "proto3";

option go_package = "micro/grpc02/service";

package service;

service Echo {
  rpc UnaryEcho (EchoRequest) returns (EchoResponse){} //UnaryAPI：普通一元方法
  rpc ServerStreamingEcho (EchoRequest) returns (stream EchoResponse){} //ServerStreaming：服务端推送流
  rpc ClientStreamingEcho (stream EchoRequest) returns (EchoResponse){}//ClientStreaming：客户端推送流
  rpc BidirectionalStreamingEcho (stream EchoRequest) returns (stream EchoResponse){} //BidirectionalStreaming：双向推送流
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string  message = 1;
}
//
//protoc -I . \
//--go_out=./grpc02/service \
//--go_opt=module="micro/grpc02/service" \
//--go-grpc_out=./grpc02/service \
//--go-grpc_opt=module="micro/grpc02/service" \
//./grpc02/service/service.proto
